syntax = "proto3";

option java_package = "com.orange.vsc.pvr.api.generate";
option java_outer_classname = "PvrSerivceProto";

package dsf.vsc.pvr.api;

service pvrSerivce {
    rpc queryRecordPlans (QueryRecordPlansReq) returns (QueryRecordPlansResp) {}
}

message QueryRecordPlansReq {
    QueryRecordPlansRequest arg0 = 1;
}

message QueryRecordPlansRequest {
    int64 subscriberSn = 1;
    string planId = 2;
    string fileId = 3;
}

message QueryRecordPlansResp {
    QueryRecordPlansResponse arg0 = 1;
}

message QueryRecordPlansResponse {
    Result result = 1;
    RecordPlan plan = 2;
}

message Result {
    string retCode = 1;
    string retMsg = 2;
}

message RecordPlan {
    string planId = 1;
    int64 profileSn = 2;
    string srcDeviceId = 3;
    string channelId = 4;
    RecordPlan plan = 5;
    repeated string childPlanIds = 6;
    repeated RecordFile files = 7;
}

message RecordFile {
    int32 definition = 1;
    int32 endOffset = 2;
    string fileId = 3;
}